# primitive-byte-iter-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: impl_be.rs  impl_default.rs  impl_le.rs  impl_ne.rs  lib.rs
